# logomanip

./: .gitignore  CMakeLists.txt  README
MATLAB/: addclip.m  anms.m  apply_homography.m  est_homography.m  extract_match.m  hoggenerate.m  hogmat.m  logorematch.m  ransac_est_model.m
MATLAB/inactive/: chi2dist.m  rotshcon.m  scfilter.m  scmask.m
MATLAB/test/: disp_corner.m
matlab/: apply_tps.m  corner_detect.m  est_tps.m  feat_match.m  hog.m  sample_from_clipart.m
matlab/inactive/: myCanny.m  myEdge.m  shcon.m
matlab/test/: disp_inlier_match.m
src/: CMakeLists.txt  logomanip.cxx
